test-cases/negative/test_013_function_without_name.lay
# negative test: function declaration without name
# expected: error should be thrown

define function that takes x and returns Number
  return x


